# hrfs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/data/1p36.13/: 1p36.haps.tsv
examples/experiments/1p36.13/: Snakefile  config.yaml
examples/experiments/examples/: Snakefile  config.yaml
examples/experiments/sim/: Snakefile  config.yaml
examples/rules/: common.smk  sim.smk
experiments/1p36.13/: config.yaml
experiments/1p36.13/data/: 1p36.13.gfa
experiments/examples/: Snakefile  config.yaml
experiments/examples/data/: paper.gfa
experiments/sim/: Snakefile  config.yaml
experiments/sim_flow/: Snakefile  config.yaml
rules/: aux.smk  common.smk  eval.smk  gurobi.smk  sim.smk
scripts/: check_founder_solution.py  check_input.sh  fndcmp.sh  walk2path.sh  wide2gfa.awk  xhap.sh
software/: Cargo.toml
software/src/: flow.rs
src/: graph.rs  lib.rs  sequence.rs
